# PyAXBPS

./: MANIFEST.in  README.md  README_pypi  __init__.py  example.py  fileinteraction.py  process_AXBT.py  process_AXCP.py  process_AXCTD.py  pyproject.toml  requirements.txt
AXBTProcessor/: AXBTprocessor.py  README.md  process_AXBT.py
AXCPProcessor/: AXCPprocessor.py  README.md  _AXCP_decode_fxns.py  geomag_axbps.py  process_AXCP.py
AXCTDProcessor/: AXCTDprocessor.py  README.md  parse.py  processAXCTD.py
PyAXBPS/: __init__.py  autoqc.py  fileinteraction.py
PyAXBPS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PyAXBPS/AXBTProcessor/: AXBTprocessor.py  README.md
PyAXBPS/AXCPProcessor/: AXCPprocessor.py  README.md  _AXCP_convert_fxns.py  _AXCP_decode_fxns.py
PyAXBPS/AXCTDProcessor/: AXCTDprocessor.py  README.md  demodulate.py  parse.py  temp_LUT.txt
PyAXBPS/cmd_line/: process_AXCTD.py
cmd_line/: process_AXCP.py
